output.txt
solution.c: In function ‘parallel_op_all_pair’:
solution.c:540:30: error: expected ‘#pragma omp’ clause before ‘dynamic’
  540 |     #pragma omp parallel for dynamic nonmonotonic collapse(2) num_threads(number_thread) reduction(min:minimum) threadprivate(data)
      |                              ^~~~~~~
200 39432 32 102.070457
200 39432 32 105.058716
200 39432 32 101.139218
200 39432 32 107.711248
200 39432 32 103.862068
200 39432 32 105.487534
200 39432 32 103.711969
200 39432 32 102.117119 8842
200 39432 32 8842 103.399841 
200 39432 32 8842 104.629734 
Job ID           : 39576292
Cluster          : spartan
User/Project     : lingxiao1/punim0520
Nodes            : 1
Wall-clock time  : 00:17:21 / 03:00:00

Displaying overall resources usage from 2022-09-12 16:08:12 to 2022-09-12 16:25:33:

NODE            CPU#        TOT%   ( USR   / SYS   / WIO   / IDLE  ) 

spartan-bm087 : 
                CPU# 1    : 67.0   (  66.9 /   0.2 /   0.0 /  33.0 ) 
                CPU# 2    : 50.8   (  50.5 /   0.2 /   0.0 /  49.2 ) 
                CPU# 3    : 59.8   (  59.6 /   0.2 /   0.0 /  40.2 ) 
                CPU# 4    : 58.0   (  57.8 /   0.2 /   0.0 /  42.0 ) 
                CPU# 5    : 65.6   (  65.5 /   0.1 /   0.0 /  34.4 ) 
                CPU# 6    : 58.1   (  57.9 /   0.2 /   0.0 /  41.9 ) 
                CPU# 7    : 63.2   (  63.0 /   0.2 /   0.0 /  36.8 ) 
                CPU# 8    : 54.1   (  53.9 /   0.2 /   0.0 /  45.9 ) 
                CPU# 9    : 68.6   (  68.4 /   0.3 /   0.0 /  31.4 ) 
                CPU# 10   : 53.2   (  53.0 /   0.2 /   0.0 /  46.8 ) 
                CPU# 11   : 59.5   (  59.4 /   0.1 /   0.0 /  40.5 ) 
                CPU# 12   : 61.1   (  60.9 /   0.1 /   0.0 /  38.9 ) 
                CPU# 13   : 60.1   (  59.9 /   0.1 /   0.0 /  39.9 ) 
                CPU# 14   : 65.8   (  65.7 /   0.1 /   0.0 /  34.2 ) 
                CPU# 15   : 61.4   (  61.2 /   0.2 /   0.0 /  38.6 ) 
                CPU# 16   : 66.9   (  66.5 /   0.3 /   0.0 /  33.1 ) 
                CPU# 17   : 61.6   (  61.4 /   0.2 /   0.0 /  38.4 ) 
                CPU# 18   : 62.9   (  62.8 /   0.1 /   0.0 /  37.1 ) 
                CPU# 19   : 55.2   (  55.1 /   0.1 /   0.0 /  44.8 ) 
                CPU# 20   : 60.4   (  60.2 /   0.1 /   0.0 /  39.6 ) 
                CPU# 21   : 49.8   (  49.5 /   0.3 /   0.0 /  50.2 ) 
                CPU# 22   : 75.6   (  75.4 /   0.2 /   0.0 /  24.4 ) 
                CPU# 23   : 66.6   (  66.2 /   0.4 /   0.0 /  33.4 ) 
                CPU# 24   : 71.8   (  71.6 /   0.2 /   0.0 /  28.2 ) 
                CPU# 25   : 75.5   (  75.3 /   0.1 /   0.0 /  24.5 ) 
                CPU# 26   : 78.4   (  78.3 /   0.1 /   0.0 /  21.6 ) 
                CPU# 27   : 70.7   (  70.5 /   0.2 /   0.0 /  29.3 ) 
                CPU# 28   : 72.8   (  72.7 /   0.1 /   0.0 /  27.2 ) 
                CPU# 29   : 75.3   (  75.3 /   0.1 /   0.0 /  24.7 ) 
                CPU# 30   : 73.4   (  73.3 /   0.1 /   0.0 /  26.6 ) 
                CPU# 31   : 71.2   (  71.1 /   0.1 /   0.0 /  28.8 ) 
                CPU# 32   : 65.1   (  65.0 /   0.1 /   0.0 /  34.9 ) 


Allocated CPUs            : 32   
  CPUs with usage <25%    : 0    
  CPUs with usage <50%    : 1    
  CPUs with usage >50%    : 31   

Memory used (RAM)         : 0.0%  [8MB of 128000MB]

--------------------------------------------
